--- a/Python_CheatSheet_noSolutions.ipynb
+++ b/Python_CheatSheet_noSolutions.ipynb
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1026,25 +1026,9 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name isMatthias\n",
-      "My name is Matthias\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Solution\n",
-    "# this defines the variable name to be \"Matthias\"\n",
-    "name = \"Matthias\"\n",
-    "# this prints out a string AND then the variable name\n",
-    "print(\"My name is\"+name)\n",
-    "\n",
-    "# small bug fix: Add a spacebar in between.\n",
-    "print(\"My name is \"+name)"
+    "# Solution here:\n"
    ]
   },
   {
@@ -1297,48 +1281,9 @@
     "# Your variables\n",
     "alex = 33.5\n",
     "steve = 37.75\n",
-    "text = \"The average age is \""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "id": "kJ3vPOxjqPy1",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Solution\n",
-    "average = round((alex + steve) / 2, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "id": "VQrZevO_qX0-",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The average age is 35.62\n",
-      "The average age is 35.62\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution\n",
-    "print(text + str(average))\n",
-    "# or\n",
-    "print(f\"{text}{average}\")"
+    "text = \"The average age is \"\n",
+    "\n",
+    "# Solution here:"
    ]
   },
   {
@@ -1648,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "id": "3o2BAV_Pwa40"
    },
@@ -1675,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "id": "30aEmwu2x3Pb",
     "slideshow": {
@@ -1732,23 +1677,11 @@
     "         {'name':'Steve', 'age':28, 'hobbies':'studying'},\n",
     "         {'name':'Patricia', 'age':20, 'hobbies':'tennis'},\n",
     "         {'name':'Karen', 'age':42, 'hobbies':'diving'}\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "id": "7d_YVJtzqAu1",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Solution\n",
-    "# one line of code\n",
-    "users[3]['age'] = users[3]['age'] + 1"
+    "]\n",
+    "\n",
+    "# Solution here:\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2320,43 +2253,19 @@
    "outputs": [],
    "source": [
     "# The password variable\n",
-    "password = \"Abc25eSdd\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "id": "UE2YtVMKQRSp",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "success\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution\n",
     "password = \"Abc25eSdd\"\n",
     "\n",
-    "if len(password)>7:\n",
-    "  if password.lower()!=password: # this compares the lowercase password with the normal password.\n",
-    "    # If they were equal, it would mean that there is no uppercase letter.\n",
-    "    if \"e\" in password.lower():\n",
-    "            # I used variable.lower() here again, in case the letter E is capitalised in the password\n",
-    "      print(\"success\")\n",
-    "    else:\n",
-    "      print(\"The password must include an 'e'\")\n",
-    "  else:\n",
-    "    print(\"The password must include at least one uppercase letter.\")\n",
-    "else:\n",
-    "  print(\"The length of the password must be at least 8 characters long.\")\n"
+    "# Solution here:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2794,7 +2703,16 @@
    "source": [
     "# your variables\n",
     "values = [11.3, 7.5, 3.6, 7.7, 3.5, 9.9, 10.0,\n",
-    "          8.4, 4.4, 7.6, 2.5, 14.5, 6.9, 9.6]"
+    "          8.4, 4.4, 7.6, 2.5, 14.5, 6.9, 9.6]\n",
+    "\n",
+    "# Solution here:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2815,117 +2733,6 @@
    "metadata": {},
    "source": [
     "<img src=\"https://raw.githubusercontent.com/PerfXWeb/python-workshop-2022-11-09/master/images/pw-menti.png\" width=\"60%\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "id": "J4ovI385QBf4",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.509090909090909\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (1) - the not so elegant way\n",
-    "divide = 0 # counting the number of valid entries\n",
-    "total = 0 # summing up all valid entries\n",
-    "for i in values:\n",
-    "    if i<10: # if entry is valid, update our variables\n",
-    "        total = total + i\n",
-    "        divide = divide + 1\n",
-    "\n",
-    "average = total / divide # calculate average\n",
-    "print(average)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.509090909090909\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (2) - much more elegant (using remove(), sum() and len())\n",
-    "for i in values:\n",
-    "    if i>=10: # if entry is valid, remove from that list\n",
-    "        values.remove(i)\n",
-    "        \n",
-    "average = sum(values) / len(values) # calculate average\n",
-    "\n",
-    "print(average)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.509090909090909\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (3) - fancy way using numpy (a very popular Python package for data analysis)\n",
-    "import numpy as np\n",
-    "\n",
-    "value_array = np.array(values) # turn list into a Numpy array\n",
-    "value_array_filtered = value_array[i < 10] # filter out all invalid entries\n",
-    "average = np.average(value_array_filtered) # calculate average\n",
-    "\n",
-    "print(average)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.509090909090909\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (4) - Basically Solutoin 3 but much slicker\n",
-    "import numpy as np\n",
-    "average = np.average(np.array(values)[i < 10])\n",
-    "print(average)"
    ]
   },
   {
@@ -3759,61 +3566,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "id": "ZpvvSsVlhoQr",
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.333333333333332\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Solution\n",
-    "def average_calc(no1, no2, no3):\n",
-    "  return (no1+no2+no3)/3\n",
+    "# Solution here:\n",
     "\n",
     "\n",
-    "result = average_calc(11, 13, 25)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "id": "NBUVX-CjidZ2",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.333333333333332\n",
-      "28.666666666666668\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (Bonus)\n",
-    "def average_calc(numbers):\n",
-    "  return sum(numbers)/len(numbers)\n",
     "\n",
-    "\n",
-    "result = average_calc([11, 13, 25])\n",
-    "print(result)\n",
-    "result = average_calc([11, 13, 25, 22, 2, 99])\n",
-    "print(result)"
+    "\n"
    ]
   },
   {
@@ -4437,283 +4203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "id": "IsADtxAEg9Tn",
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: Flop\n",
-      "1: Flip\n",
-      "2: Flip\n",
-      "3: Flop\n",
-      "4: Flip\n",
-      "5: Flip\n",
-      "6: Flop\n",
-      "7: Flip\n",
-      "8: Flip\n",
-      "9: Flop\n",
-      "10: Flip\n",
-      "11: Flip\n",
-      "12: Flop\n",
-      "13: Flip\n",
-      "14: Flip\n",
-      "15: Flop\n",
-      "16: Flip\n",
-      "17: Flip\n",
-      "18: Flop\n",
-      "19: Flip\n",
-      "20: Flip\n",
-      "21: Flop\n",
-      "22: Flip\n",
-      "23: Flip\n",
-      "24: Flop\n",
-      "25: Flip\n",
-      "26: Flip\n",
-      "27: Flop\n",
-      "28: Flip\n",
-      "29: Flip\n",
-      "30: Flop\n",
-      "31: Flip\n",
-      "32: Flip\n",
-      "33: Flop\n",
-      "34: Flip\n",
-      "35: Flip\n",
-      "36: Flop\n",
-      "37: Flip\n",
-      "38: Flip\n",
-      "39: Flop\n",
-      "40: Flip\n",
-      "41: Flip\n",
-      "42: Flop\n",
-      "43: Flip\n",
-      "44: Flip\n",
-      "45: Flop\n",
-      "46: Flip\n",
-      "47: Flip\n",
-      "48: Flop\n",
-      "49: Flip\n",
-      "50: Flip\n",
-      "51: Flop\n",
-      "52: Flip\n",
-      "53: Flip\n",
-      "54: Flop\n",
-      "55: Flip\n",
-      "56: Flip\n",
-      "57: Flop\n",
-      "58: Flip\n",
-      "59: Flip\n",
-      "60: Flop\n",
-      "61: Flip\n",
-      "62: Flip\n",
-      "63: Flop\n",
-      "64: Flip\n",
-      "65: Flip\n",
-      "66: Flop\n",
-      "67: Flip\n",
-      "68: Flip\n",
-      "69: Flop\n",
-      "70: Flip\n",
-      "71: Flip\n",
-      "72: Flop\n",
-      "73: Flip\n",
-      "74: Flip\n",
-      "75: Flop\n",
-      "76: Flip\n",
-      "77: Flip\n",
-      "78: Flop\n",
-      "79: Flip\n",
-      "80: Flip\n",
-      "81: Flop\n",
-      "82: Flip\n",
-      "83: Flip\n",
-      "84: Flop\n",
-      "85: Flip\n",
-      "86: Flip\n",
-      "87: Flop\n",
-      "88: Flip\n",
-      "89: Flip\n",
-      "90: Flop\n",
-      "91: Flip\n",
-      "92: Flip\n",
-      "93: Flop\n",
-      "94: Flip\n",
-      "95: Flip\n",
-      "96: Flop\n",
-      "97: Flip\n",
-      "98: Flip\n",
-      "99: Flop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Solution\n",
-    "\n",
-    "class FlipFlop():\n",
-    "  def __init__(self, div):\n",
-    "    self.div = div\n",
-    "\n",
-    "  def divisible(self, maxint):\n",
-    "    for x in range(maxint):\n",
-    "      if x % self.div == 0:\n",
-    "        print(f\"{x}: Flop\")\n",
-    "      else:\n",
-    "        print(f\"{x}: Flip\")\n",
+    "# Solution here:\n",
     "\n",
     "\n",
-    "check1 = FlipFlop(3)\n",
-    "check1.divisible(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "id": "e0g9xTLEkQRe",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: Flop\n",
-      "1: Flip\n",
-      "2: Flip\n",
-      "3: Flop\n",
-      "4: Flip\n",
-      "5: Flip\n",
-      "6: Flop\n",
-      "7: Flip\n",
-      "8: Flip\n",
-      "9: Flop\n",
-      "10: Flip\n",
-      "11: Flip\n",
-      "12: Flop\n",
-      "13: Flop\n",
-      "14: Flip\n",
-      "15: Flop\n",
-      "16: Flip\n",
-      "17: Flip\n",
-      "18: Flop\n",
-      "19: Flip\n",
-      "20: Flip\n",
-      "21: Flop\n",
-      "22: Flip\n",
-      "23: Flop\n",
-      "24: Flop\n",
-      "25: Flip\n",
-      "26: Flip\n",
-      "27: Flop\n",
-      "28: Flip\n",
-      "29: Flip\n",
-      "30: Flop\n",
-      "31: Flop\n",
-      "32: Flop\n",
-      "33: Flop\n",
-      "34: Flop\n",
-      "35: Flop\n",
-      "36: Flop\n",
-      "37: Flop\n",
-      "38: Flop\n",
-      "39: Flop\n",
-      "40: Flip\n",
-      "41: Flip\n",
-      "42: Flop\n",
-      "43: Flop\n",
-      "44: Flip\n",
-      "45: Flop\n",
-      "46: Flip\n",
-      "47: Flip\n",
-      "48: Flop\n",
-      "49: Flip\n",
-      "50: Flip\n",
-      "51: Flop\n",
-      "52: Flip\n",
-      "53: Flop\n",
-      "54: Flop\n",
-      "55: Flip\n",
-      "56: Flip\n",
-      "57: Flop\n",
-      "58: Flip\n",
-      "59: Flip\n",
-      "60: Flop\n",
-      "61: Flip\n",
-      "62: Flip\n",
-      "63: Flop\n",
-      "64: Flip\n",
-      "65: Flip\n",
-      "66: Flop\n",
-      "67: Flip\n",
-      "68: Flip\n",
-      "69: Flop\n",
-      "70: Flip\n",
-      "71: Flip\n",
-      "72: Flop\n",
-      "73: Flop\n",
-      "74: Flip\n",
-      "75: Flop\n",
-      "76: Flip\n",
-      "77: Flip\n",
-      "78: Flop\n",
-      "79: Flip\n",
-      "80: Flip\n",
-      "81: Flop\n",
-      "82: Flip\n",
-      "83: Flop\n",
-      "84: Flop\n",
-      "85: Flip\n",
-      "86: Flip\n",
-      "87: Flop\n",
-      "88: Flip\n",
-      "89: Flip\n",
-      "90: Flop\n",
-      "91: Flip\n",
-      "92: Flip\n",
-      "93: Flop\n",
-      "94: Flip\n",
-      "95: Flip\n",
-      "96: Flop\n",
-      "97: Flip\n",
-      "98: Flip\n",
-      "99: Flop\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution (incl. bonus)\n",
-    "\n",
-    "class FlipFlop():\n",
-    "  def __init__(self, div):\n",
-    "    self.div = div\n",
-    "\n",
-    "  def divisible(self, maxint):\n",
-    "    for x in range(maxint):\n",
-    "      if x % self.div == 0:\n",
-    "        print(f\"{x}: Flop\")\n",
-    "      else:\n",
-    "        print(f\"{x}: Flip\")\n",
-    "\n",
-    "  def divisible_or_self(self, maxint):\n",
-    "    for x in range(maxint):\n",
-    "      if x % self.div == 0 or str(self.div) in str(x):\n",
-    "                              # to check every digit, we have to use str() to convert it.\n",
-    "                              # otherwise we get an \"argument of type 'int' is not iterable\" error.\n",
-    "        print(f\"{x}: Flop\")\n",
-    "      else:\n",
-    "        print(f\"{x}: Flip\")\n",
     "\n",
     "\n",
-    "check1 = FlipFlop(3)\n",
-    "check1.divisible_or_self(100)"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
