typo in nested ifs

--- a/Python_CheatSheet_noSolutions.ipynb
+++ b/Python_CheatSheet_noSolutions.ipynb
@@ -237,7 +237,7 @@
     "* know how to get started with your own code\n",
     " - Where to look for code\n",
     " - How to avoid common mistakes\n",
-    " - Intro into working with local computer files, Excel and APIs"
+    " - Intro into working with local computer files, APIs and more"
    ]
   },
   {
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "id": "PFJfMlrZDXZf"
    },
@@ -2057,7 +2057,7 @@
      "output_type": "stream",
      "text": [
       "Person is over 18.\n",
-      "Person's programming grade is lower than 2.\n"
+      "Person's programming grade is lower than 3.\n"
      ]
     }
    ],
@@ -2068,7 +2068,7 @@
     "  print(\"Person is over 18.\")\n",
     "\n",
     "  if person['programming_grade']<3:\n",
-    "    print(\"Person's programming grade is lower than 2.\")\n",
+    "    print(\"Person's programming grade is lower than 3.\")\n",
     "  \n",
     "  else:\n",
     "    print(\"Programming grade is higher than 2.\")\n",
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "id": "UUA3C-fPDbJ_"
    },
@@ -2101,7 +2101,7 @@
      "output_type": "stream",
      "text": [
       "Person is over 18.\n",
-      "Person programming grade is lower than 2.\n",
+      "Person programming grade is lower than 3.\n",
       "And the person's name is Karen\n"
      ]
     }
@@ -2113,7 +2113,7 @@
     "  print(\"Person is over 18.\")\n",
     "\n",
     "  if person['programming_grade']<3:\n",
-    "    print(\"Person programming grade is lower than 2.\")\n",
+    "    print(\"Person programming grade is lower than 3.\")\n",
     "\n",
     "    if person['name']==\"Karen\":\n",
     "      print(\"And the person's name is Karen\")\n",
