--- a/Python_CheatSheet_withSolutions.ipynb
+++ b/Python_CheatSheet_withSolutions.ipynb
@@ -237,7 +237,7 @@
     "* know how to get started with your own code\n",
     " - Where to look for code\n",
     " - How to avoid common mistakes\n",
-    " - Intro into working with local computer files, Excel and APIs"
+    " - Intro into working with local computer files, APIs and more"
    ]
   },
   {
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "id": "PFJfMlrZDXZf"
    },
@@ -2124,7 +2124,7 @@
      "output_type": "stream",
      "text": [
       "Person is over 18.\n",
-      "Person's programming grade is lower than 2.\n"
+      "Person's programming grade is lower than 3.\n"
      ]
     }
    ],
@@ -2135,7 +2135,7 @@
     "  print(\"Person is over 18.\")\n",
     "\n",
     "  if person['programming_grade']<3:\n",
-    "    print(\"Person's programming grade is lower than 2.\")\n",
+    "    print(\"Person's programming grade is lower than 3.\")\n",
     "  \n",
     "  else:\n",
     "    print(\"Programming grade is higher than 2.\")\n",
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "id": "UUA3C-fPDbJ_"
    },
@@ -2168,7 +2168,7 @@
      "output_type": "stream",
      "text": [
       "Person is over 18.\n",
-      "Person programming grade is lower than 2.\n",
+      "Person programming grade is lower than 3.\n",
       "And the person's name is Karen\n"
      ]
     }
@@ -2180,7 +2180,7 @@
     "  print(\"Person is over 18.\")\n",
     "\n",
     "  if person['programming_grade']<3:\n",
-    "    print(\"Person programming grade is lower than 2.\")\n",
+    "    print(\"Person programming grade is lower than 3.\")\n",
     "\n",
     "    if person['name']==\"Karen\":\n",
     "      print(\"And the person's name is Karen\")\n",
